# OS-Assignment-241

BTL/: CMakeLists.txt
BTL/ossim_source_code/: os
BTL/ossim_source_code/include/: common.h  mm.h  os-cfg.h  os-mm.h
BTL/ossim_source_code/input/: nhom3_test1  nhom3_test2  os_0_mlq_paging_1  os_1_singleCPU_mlq  sched  sched_0  sched_man_0
BTL/ossim_source_code/input/proc/: nhom3  nhom3_1  p0s
BTL/ossim_source_code/src/: cpu.c  loader.c  mem.c  mm-memphy.c  mm-vm.c  mm.c  os.c  queue.c  sched.c
ossim_source_code/: os
ossim_source_code/include/: common.h  mm.h  os-cfg.h  os-mm.h  queue.h
ossim_source_code/input/: sched
ossim_source_code/src/: mm-vm.c  mm.c  os.c  queue.c  sched.c
